syntax = "proto3";

package book;

option java_package = "me.vinsce.remote.server.proto";
option java_outer_classname = "CommandProto";

message GenericCommand {
  string command = 1;
}

message GenericCommandResponse {
  bool success = 1;
}

message MouseMoveCommand {
  float deltaX = 1;
  float deltaY = 2;
}

message MouseClickCommand {
  bool singleTap = 1;
}

message MouseEventCommand {
  enum EventType {
    SINGLE_TAP = 0;
    DOUBLE_TAP = 1;
    LONG_PRESS = 2;
    SINGLE_TAP_UP = 3;
    RIGHT_TAP = 4;
  }
  EventType eventType = 1;
}

message PowerCommand {
  enum PowerAction {
    SHUTDOWN = 0;
    RESTART = 1;
    SLEEP = 2;
  }
  PowerAction action = 1;
}

service CommandService {
  rpc RunCommand (GenericCommand) returns (GenericCommandResponse);

  rpc MoveMouse(MouseMoveCommand) returns (GenericCommandResponse);
  rpc ClickMouse(MouseClickCommand) returns (GenericCommandResponse);
  rpc MouseEvent(MouseEventCommand) returns (GenericCommandResponse);

  rpc RunPowerCommand(PowerCommand) returns (GenericCommandResponse);
}